--- a/app/static/css/common/common.css
+++ b/app/static/css/common/common.css
@@ -1,4 +1,4 @@
-body { min-width: 1180px; padding-top: 70px; padding-bottom: 50px; background-color:#eceff4;
+body { min-width: 1180px; /*padding-top: 70px; padding-bottom: 50px; */background-color:#eceff4;
     font-size:16px;font-family: 'PingFang SC', 'Helvetica Neue',"STHeitiSC-Light","Microsoft YaHei",sans-serif;}
 /* Reset the container */
 .container { width: 1080px;!important; max-width: none !important; }
@@ -19,9 +19,11 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;font-weight:normal;font-style: normal;}
 .lt-ie9 .ys-amp, .no-js .ys-amp{display: none;}
 .lt-ie9 .updateBrowser{display: block;width:80%;margin:50px auto;padding:20px;font-size: 18px;color:#333;text-align: center;}
 
+.ys-amp{width:100%;height:100%;position: relative;}
 /* s-d */
 #preloader { position: fixed; /*display:none;*/ top: 0; left: 0; width: 100%; height: 100%; background-color: #e4e7ea; z-index: 10000; }
 #status { width: 30px; height: 30px; position: absolute; left: 50%; top: 50%; margin: -15px 0 0 -15px; font-size: 32px; }
+#preloader.hide{display: none;}
 
 /*backdrop && loading*/
 .ys-backdrop{ display:none; position:fixed; z-index:9; left:0; right:0; top:0; bottom:0; background-color:#333; opacity: 0;
@@ -72,6 +74,7 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;font-weight:normal;font-style: normal;}
 /*items button pagenigation etc.. */
 a{color:#55bbe6;}
 a:hover, a:focus, a:active{color:#2da8cc;}
+
 .table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th{
     font-weight:normal;border-bottom:solid 1px #dae1e7;border-top:0; }
 .table>thead>tr>th{border-bottom:solid 2px #dae1e7;}
