--- a/app/static/css/main/amp_main.css
+++ b/app/static/css/main/amp_main.css
@@ -1,5 +1,5 @@
 html,body{/*position:relative;*/width:100%;height:100%;overflow: auto;min-height:620px;}
-.page-main{padding-left:200px;overflow: hidden;}
+.page-main{padding-left:200px;/*overflow: hidden;*/}
 
 .ys-icon{display: block;background-size: contain;background-position: center center;background-repeat: no-repeat;}
 .ys-icon-spirit{display: block;background-image: url(../../images/main/menu_icon.png);content: " ";}
@@ -92,7 +92,7 @@ a.system-item:hover .ys-icon-systoggle{background-position: -74px -254px;}
 
 /***** MAIN PANEL *****/
 
-.mainpanel { margin-left:0; position: relative;width:100%;height:100%;padding-top:44px;padding-bottom: 60px;min-height: 100vh;background: #e4e7ea; /*min-height: 1000px; */}
+.mainpanel { margin-left:0; position: relative;width:100%;height:100%;padding-top:44px;padding-bottom:20px;min-height: 100vh;background: #e4e7ea; /*min-height: 1000px; */}
 .pageheader { display:none;position: relative;padding: 0;height:44px;line-height: 44px; border-bottom: 0; border-top: 0; background: #f3f4f8;overflow-y: hidden;  }
 .pageheader.active{/*display: block;*/display: none;}
 .pageheader h2 { font-size: 28px; color: #1D2939; letter-spacing: -0.5px; margin: 0; }
@@ -173,6 +173,7 @@ a.system-item:hover .ys-icon-systoggle{background-position: -74px -254px;}
 
 .head-main-menu .nav-tabs > li > a{
     margin-right: 0;padding:0 25px;
+    font-size: 14px;
     line-height:44px;
     border: 0;
     border-radius: 0;
@@ -219,3 +220,7 @@ a.system-item:hover .ys-icon-systoggle{background-position: -74px -254px;}
     .rightpanel {padding-top: 15px;}
     .rightpanel a {font-size: 18px;}
 }*/
+
+.amp-side-opts{display: none;width:100%;min-height:200px;padding:15px;}
+.amp-side-opts.active{display: block;}
+
