--- a/app/static/css/common/common.css
+++ b/app/static/css/common/common.css
@@ -1,4 +1,4 @@
-body { min-width: 1180px; /*padding-top: 70px; padding-bottom: 50px; */background-color:#eceff4;
+body { min-width: 1180px; /*padding-top: 70px; padding-bottom: 50px; */background-color:#fff/*#eceff4*/;
     font-size:16px;font-family: 'PingFang SC', 'Helvetica Neue',"STHeitiSC-Light","Microsoft YaHei",sans-serif;}
 /* Reset the container */
 .container { width: 1080px;!important; max-width: none !important; }
@@ -10,7 +10,8 @@ a{text-decoration: none;}
 em,i,span,b,label{font-weight:normal;font-style: normal;}
 h1,h2,h3,h4,h5,h6{margin:0;padding:0;font-weight:normal;font-style: normal;}
 
-.no-outline,input{outline:0;
+.no-outline,input,.btn:focus,.btn:active:focus,.btn.active:focus{
+    outline:0;
     -webkit-tap-highlight-color: rgba(0,0,0,0);-moz-tap-highlight-color:rgba(0,0,0,0);-ms-tap-hightlight-color:rgba(0,0,0,0);tap-highlight-color:rgba(0,0,0,0);
     -webkit-focus-ring-color: rgba(0,0,0,0);-moz-focus-ring-color:rgba(0,0,0,0);-ms-focus-ring-color:rgba(0,0,0,0);focus-ring-color:rgba(0,0,0,0);
 }
@@ -79,6 +80,8 @@ a:hover, a:focus, a:active{color:#2da8cc;}
     font-weight:normal;border-bottom:solid 1px #dae1e7;border-top:0; }
 .table>thead>tr>th{border-bottom:solid 2px #dae1e7;}
 
+
+
 .amp-btn{padding:0 12px;min-width: 120px;height:40px;line-height:40px;text-align: center;color:#fff;border:0;border-radius:3px;
         background-color:#33d393;font-size:15px;position: relative;z-index:99;}
 .amp-btn:hover, .amp-btn:focus, .amp-btn:active{/*background-color: #31be83;*/color:#fff;}
@@ -93,10 +96,49 @@ a:hover, a:focus, a:active{color:#2da8cc;}
     -webkit-transform: scale(1);
     transform: scale(1);
 }
+
 /*常用icons*/
 .ys-icon {background-image:url(../../images/icon.png);background-repeat:no-repeat;}
 .ys-icon-amp {display:block;position:absolute;top:0;left:50%;margin-left:-87px;width:174px;height:58px;
     background-position:-190px -96px;}
+.ys-icon-amp-s {display:block;position:absolute;top:9px;left:14px;margin-left:0;width:81px;height:26px;
+    background-position:-190px -96px;}
 
 
+/**/
+.amp-block{padding:0;}
+.amp-block-pd{padding-left:28px;padding-right:28px;}
+.ys-amp .amp-block-title {
+    position: relative;
+    margin-bottom: 8px;
+    height: 44px;
+    line-height: 44px;
+    overflow: hidden;
+}
+.ys-amp .amp-block-title:before, .ys-amp .amp-block-title:after {
+    display: block;
+    border-top: solid 3px #5ab46e;
+    height: 2px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: " ";
+}
+.ys-amp .amp-block-title:after {
+    width: 100%;
+    border-top: solid 3px #dfe5e9;
+    z-index: 9;
+}
+.ys-amp .amp-block-title:before {
+    width: 65px;
+    border-top: solid 3px #5ab46e;
+    z-index: 99;
+}
+.ys-amp .amp-block-title h3 {
+    height: 44px;
+    line-height: 44px;
+    padding: 0;
+    font-size: 18px;
+    color: #333;
+}
 
