--- a/app/static/css/main/main.css
+++ b/app/static/css/main/main.css
@@ -64,3 +64,26 @@ html,body{padding:0;min-width: 100%;min-height:100%;height:100%;}
 #ys-amp-create .input-group{margin-bottom:20px;width:100%;text-align: left;}
 #ys-amp-create .input-group>label{display: block;margin-bottom:3px;color: #8592a3;font-size:13px;}
 #ys-amp-create .input-group>input{padding-left:12px;padding-right:12px;height:40px;width:100%;background-color:#3a4153;border:0;border-radius:0;font-size:13px;color:#f3f4f8;}
+
+
+
+.datetimepicker{min-width: 220px;}
+.datetimepicker table{width:100%;}
+
+.glyphicon {
+    position: relative;
+    top: 1px;
+    display: inline-block;
+    font-family: 'Glyphicons Halflings';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+.icon-arrow-right:before {
+    content: "\e092";
+}
+.icon-arrow-left:before {
+    content: "\e091";
+}
