--- a/app/views/noi_analyse/noi.html
+++ b/app/views/noi_analyse/noi.html
@@ -1,10 +1,10 @@
 <div class="amp-content-panel noi-view" id="noi">
-    <div class="amp-block" id="noi-summary">
-        <div class="amp-table-wrapper">
+    <div class="amp-block">
+        <div class="amp-table-wrapper" id="noi-summary">
             <table class="table table-right-bordered amp-table" >
                 <thead>
                 <tr>
-                    <th>资产收入NOI(万元)</th>
+                    <th>净运营收入NOI(万元)</th>
                     <th>总投资成本(万元)</th>
                     <th>估值(万元)</th>
                     <th>贷款(万元)</th>
@@ -14,39 +14,41 @@
                 <tbody>
                 <tr class="tr-info-main">
                     <td>
-                        <h3>2652.32</h3>
+                        <span>当月实际</span>
+                        <h3>216.57</h3>
                         <span>全年预测</span>
-                        <h5>216.57</h5>
-                        <span>单月实际</span>
-                    </td>
-                    <td>
-                        <h3>7.29%</h3>
-                        <span>预测回报率</span>
-                        <h5>37521</h5>
-                        <span>总成本</span>
+                        <h5>2652.32</h5>
 
                     </td>
                     <td>
-                        <h3>45569</h3>
+                        <span>总成本</span>
+                        <h3>37521</h3>
+                        <span>预测回报率(按成本)</span>
+                        <h5>7.29%</h5>
+                    </td>
+                    <td>
                         <span>估值</span>
-                        <h5>2016-02-14</h5>
+                        <h3>45569</h3>
                         <span>估值日期</span>
+                        <h5>2016-02-14</h5>
+                        <span>预测年回报率(按估值)</span>
+                        <h5>7.7%</h5>
                     </td>
                     <td>
-                        <h3>24079.79</h3>
                         <span>本金</span>
-                        <h5>2023-09-30</h5>
+                        <h3>24079.79</h3>
                         <span>到期日</span>
-                        <h5>1805.98</h5>
+                        <h5>2023-09-30</h5>
                         <span>年贷款利息</span>
+                        <h5>1805.98</h5>
                     </td>
                     <td>
-                        <h3>8.1%</h3>
-                        <span>预测收益率</span>
-                        <h5>25900.14</h5>
                         <span>当前收益</span>
-                        <h5>49979.93</h5>
+                        <h3>25900.14</h3>
                         <span>预测税前现金流</span>
+                        <h5>49979.93</h5>
+                        <span>预测收益率(按ROE)</span>
+                        <h5>8.1%</h5>
                     </td>
                 </tr>
                 </tbody>
