--- a/app/static/css/main/amp_main.css
+++ b/app/static/css/main/amp_main.css
@@ -1,4 +1,4 @@
-html,body{/*position:relative;*/width:100%;height:100%;overflow: auto;min-height:620px;}
+html,body{/*position:relative;*/width:100%;height:inherit;overflow: auto;min-height:620px;}
 .page-main{padding-left:200px;/*overflow: hidden;*/}
 
 .ys-icon{display: block;background-size: contain;background-position: center center;background-repeat: no-repeat;}
