--- a/app/static/css/common/static_table.css
+++ b/app/static/css/common/static_table.css
@@ -67,7 +67,8 @@
 .ys-table-fixed-top{ position: relative;  padding-left: 160px;width:100%;z-index:99;}
 
 .ys-table-main{ position: relative;  padding-left: 160px;width:100%;}
-
+.ys-table-main.scroll-wrapper{padding-left:0;}
+.ys-table-main.scroll-wrapper .scroll{padding-left:160px;position: relative;width:100%;}
 .amp-table-wrapper-swiper .swiper-container {
     width: 100%;
     height: 100%;
@@ -87,7 +88,38 @@
     border-right:solid 1px #d3d3d3;
 }
 
-
+/*iscroll*/
+#wrapper {
+    position: absolute;
+    z-index: 1;
+    top: 45px;
+    bottom: 48px;
+    left: 0;
+    width: 100%;
+    background: #ccc;
+    overflow: hidden;
+}
+#scroller {
+    position: absolute;
+    z-index: 1;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    width: 100%;
+    -webkit-transform: translateZ(0);
+    -moz-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    -o-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-text-size-adjust: none;
+    -moz-text-size-adjust: none;
+    -ms-text-size-adjust: none;
+    -o-text-size-adjust: none;
+    text-size-adjust: none;
+}
 
 
 
