--- a/app/static/css/common/common.css
+++ b/app/static/css/common/common.css
@@ -1,5 +1,5 @@
 body { min-width: 1180px; /*padding-top: 70px; padding-bottom: 50px; */background-color:#fff/*#eceff4*/;
-    font-size:16px;font-family: 'PingFang SC', 'Helvetica Neue',"STHeitiSC-Light","Microsoft YaHei",sans-serif;}
+    font-size:16px;font-family:    'Helvetica Neue',"STHeitiSC-Light","Microsoft YaHei",sans-serif;}
 /* Reset the container */
 .container { width: 1080px;!important; max-width: none !important; }
 *{box-sizing:border-box; /*    -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none;*/}
@@ -20,7 +20,7 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;font-weight:normal;font-style: normal;}
 .lt-ie9 .ys-amp, .no-js .ys-amp{display: none;}
 .lt-ie9 .updateBrowser{display: block;width:80%;margin:50px auto;padding:20px;font-size: 18px;color:#333;text-align: center;}
 
-.ys-amp{width:100%;height:100%;position: relative;}
+.ys-amp{width:100%;height:100%;max-width:1680px;position: relative;overflow-x:hidden;}
 /* s-d */
 #preloader { position: fixed; /*display:none;*/ top: 0; left: 0; width: 100%; height: 100%; background-color: #e4e7ea; z-index: 10000; }
 #status { width: 30px; height: 30px; position: absolute; left: 50%; top: 50%; margin: -15px 0 0 -15px; font-size: 32px; }
