--- a/app/static/css/common/static_table.css
+++ b/app/static/css/common/static_table.css
@@ -48,7 +48,8 @@
 }
 
 .amp-table-wrapper-swiper table.amp-table thead>tr.thead-tr-sub{background-color:#fff;}
-.ys-amp .table-hover>tbody>tr:hover,.ys-amp .table-hover>tbody>tr.hover{background-color:#f3f4f8;}
+.ys-amp .table-hover>tbody>tr:hover,.ys-amp .table-hover>tbody>tr.hover,
+.ys-amp .table-hover>tfoot>tr:hover,.ys-amp .table-hover>tfoot>tr.hover{background-color:#f3f4f8;}
 
 /*
 .table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th{
