--- a/app/views/noi_analyse/noi_res.html
+++ b/app/views/noi_analyse/noi_res.html
@@ -535,7 +535,7 @@
 
                                     <td>63.35%</td>
                                 </tr>
-                                <tr class="tr-sub">
+                                <tr  class="tr-sub">
                                     <td>216.57</td>
                                     <td>227.84</td>
                                     <td>-11.27</td>
@@ -565,8 +565,8 @@
             </div>
         </div>
 
-        <div class="amp-table-wrapper" id="noi-arrearage">
-            <table class="table table-no-bordered table-hover amp-table">
+        <div class="amp-table-wrapper">
+            <table class="table table-no-bordered amp-table">
                 <thead>
                 <tr >
                     <th></th>
