--- a/app/static/css/common/common.css
+++ b/app/static/css/common/common.css
@@ -89,7 +89,7 @@ a:hover, a:focus, a:active{color:#2da8cc;}
     -webkit-transition-duration: 0.3s; transition-duration: 0.3s;
     -webkit-transition-timing-function: ease-out;  transition-timing-function: ease-out;
 }
-.amp-btn:hover:before, .amp-btn:focus:before, .amp-btn:active:before {
+.amp-btn:hover:before/*.amp-btn:focus:before, .amp-btn:active:before*/ {
     -webkit-transform: scale(1);
     transform: scale(1);
 }
@@ -98,10 +98,32 @@ a:hover, a:focus, a:active{color:#2da8cc;}
 .ys-icon {background-image:url(../../images/icon.png);background-repeat:no-repeat;}
 .ys-icon-amp {display:block;position:absolute;top:0;left:50%;margin-left:-87px;width:174px;height:58px;
     background-position:-190px -96px;}
-.ys-icon-amp-s {display:block;position:absolute;top:9px;left:14px;margin-left:0;width:81px;height:26px;
-    background-position:-190px -96px;}
+.ys-icon-amp-s {display:block;position:absolute;top:9px;left:50%;margin-left:-41px;width:82px;height:26px;
+    background-position:-386px -90px;}
+
+.leftpanel-collapsed .ys-icon-amp-s{width:51px; height:44px; top:0;left:0;margin-left:0;background-position:-592px -88px;}
 
 
+.icon-menu-down{display:inline-block;position:relative;top:3.5px;width:18px;height:18px;background-position:-210px -242px;
+    -webkit-transition: transform 0.3s;
+    -moz-transition: transform 0.3s;
+    -ms-transition: transform 0.3s;
+    -o-transition: transform 0.3s;
+    transition: transform 0.3s;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);}
+.icon-menu-down:hover{background-position:-250px -244px;}
+
+tr.tr-collapse .icon-menu-down {
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    transform: rotate(180deg);
+    }
 /**/
 .amp-block{padding:0;}
 .amp-block-pd{padding-left:28px;padding-right:28px;}
