--- a/app/static/css/login/login.css
+++ b/app/static/css/login/login.css
@@ -53,7 +53,7 @@ a,button,.btn{ -moz-user-select: none; -webkit-user-select: none; -ms-user-selec
 .login-wrapper .input-addon>label#cookie:before{position: absolute;left:0;top:50%;margin-top:-8px;display: block;width:16px;height:16px;background-image:url(../../images/icon.png);background-position: -471px -136px;background-repeat: no-repeat;content:" ";}
 
 .login-wrapper .login-addon .input-addon>input:checked + label#cookie:before{background-position: -505px -136px;}
-.login-wrapper .form-wrapper a.ys-btn{display: block;height:50px;width:100%;background-color:rgba(0,200,120,0.9);text-decoration: none;color:#fff;border-radius:3px;text-align: center;line-height: 50px;font-size: 16px;
+.login-wrapper .form-wrapper a.ys-btn{display: block;height:50px;width:100%;background-color:rgba(0,200,120,0.9);text-decoration: none;color:#fff;border-radius:3px;text-align: center;line-height: 50px;font-size: 16px;position:relative; z-index:99;
     -webkit-transition: background-color 0.3s;
     -moz-transition: background-color 0.3s;
     -ms-transition: background-color 0.3s;
@@ -67,18 +67,20 @@ a,button,.btn{ -moz-user-select: none; -webkit-user-select: none; -ms-user-selec
 
 /* btn effect */
 
-.amp-btn:before { content: ""; position: absolute; z-index: -1; top: 0; left: 0; right: 0; bottom: 0; background: #31be83;border-radius:3px;
+a.amp-btn:before { content: ""; position: absolute; z-index: -1; top: 0; left: 0; right: 0; bottom: 0; background: #33d393;border-radius:3px;
     -webkit-transform: scale(0); transform: scale(0); -webkit-transition-property: transform; transition-property: transform;
     -webkit-transition-duration: 0.3s; transition-duration: 0.3s;
     -webkit-transition-timing-function: ease-out;  transition-timing-function: ease-out;
 }
-.amp-btn:hover:before, .amp-btn:focus:before, .amp-btn:active:before {
+a.amp-btn:hover:before/*, .amp-btn:focus:before, .amp-btn:active:before */{
     -webkit-transform: scale(1);
     transform: scale(1);
 }
+
 *{-webkit-appearance: none;}
 input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
     background-color: rgba(250, 255, 189,0);
     background-image: none;
     color: rgb(0, 0, 0);
 }
+
