--- a/app/views/noi_analyse/noi.html
+++ b/app/views/noi_analyse/noi.html
@@ -73,10 +73,10 @@
                 <div class="swiper-container" style="width:100%;" id="noi-main-table-head">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <table class="table table-no-bordered amp-table table-hover table-header-fixed" style="width:1800px;" >
+                            <table class="table table-no-bordered amp-table table-hover table-header-fixed" style="width:1500px;" >
                                 <thead>
-                                <tr style="border-bottom:solid 8px #fff;">
-                                    <th colspan="4" ><em><</em> 2016-08(万元)</th>
+                                <tr style="">
+                                    <th colspan="4" ><em><</em>2016-08(万元)</th>
                                     <th colspan="4" >全年累计(万元)</th>
                                     <th colspan="4" >全年(万元)</th>
                                     <th>达成率</th>
@@ -142,8 +142,18 @@
                             <th>地租</th>
                         </tr>
 
-                        <tr class="tr-sub">
-                            <th>公用事业费</th>
+                        <tr class="tr-sub tr-sub-main">
+                            <th>能耗费用<em class="ys-icon icon-menu-down"></em></th>
+                        </tr>
+
+                        <tr class="tr-tri">
+                            <th>水费</th>
+                        </tr>
+                        <tr class="tr-tri">
+                            <th>电费</th>
+                        </tr>
+                        <tr class="tr-tri">
+                            <th>煤气费</th>
                         </tr>
 
                         <tr class="tr-sub">
@@ -193,7 +203,7 @@
                 <div class="swiper-container" style="width:100%;" id="noi-main-table">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <table class="table table-no-bordered amp-table table-hover"  style="width:1800px;">
+                            <table class="table table-no-bordered amp-table table-hover"  style="width:1500px;">
                                 <tbody>
                                 <tr class="tr-main">
                                     <td>506.8</td>
@@ -346,7 +356,7 @@
 
                                 </tr>
 
-                                <tr class="tr-sub">
+                                <tr class="tr-sub tr-sub-main">
                                     <td>9.39</td>
                                     <td>10.44</td>
                                     <td>-1.05</td>
@@ -364,6 +374,63 @@
 
                                     <td></td>
                                 </tr>
+
+                                <tr class="tr-tri">
+                                    <td>3.39</td>
+                                    <td>10.44</td>
+                                    <td>-1.05</td>
+                                    <td class="t-split">-10.06%</td>
+
+                                    <td>255.5</td>
+                                    <td>283.89</td>
+                                    <td>-28.39</td>
+                                    <td class="t-split">-10.00%</td>
+
+                                    <td>5.55</td>
+                                    <td>10.44</td>
+                                    <td>-4.89</td>
+                                    <td class="t-split">-46.84%</td>
+
+                                    <td></td>
+                                </tr>
+                                <tr class="tr-tri">
+                                    <td>3.00</td>
+                                    <td>10.44</td>
+                                    <td>-1.05</td>
+                                    <td class="t-split">-10.06%</td>
+
+                                    <td>255.5</td>
+                                    <td>283.89</td>
+                                    <td>-28.39</td>
+                                    <td class="t-split">-10.00%</td>
+
+                                    <td>5.55</td>
+                                    <td>10.44</td>
+                                    <td>-4.89</td>
+                                    <td class="t-split">-46.84%</td>
+
+                                    <td></td>
+                                </tr>
+                                <tr class="tr-tri">
+                                    <td>3.00</td>
+                                    <td>10.44</td>
+                                    <td>-1.05</td>
+                                    <td class="t-split">-10.06%</td>
+
+                                    <td>255.5</td>
+                                    <td>283.89</td>
+                                    <td>-28.39</td>
+                                    <td class="t-split">-10.00%</td>
+
+                                    <td>5.55</td>
+                                    <td>10.44</td>
+                                    <td>-4.89</td>
+                                    <td class="t-split">-46.84%</td>
+
+                                    <td></td>
+                                </tr>
+
+
 
                                 <tr class="tr-sub">
                                     <td>25.01</td>
@@ -520,8 +587,8 @@
                                 <tr class="tr-main">
                                     <td>216.57</td>
                                     <td>227.84</td>
-                                    <td class="notify">-11.27</td>
-                                    <td class="t-split notify">-4.95%</td>
+                                    <td>-11.27</td>
+                                    <td class="t-split">-4.95%</td>
 
                                     <td>216.57</td>
                                     <td>227.84</td>
@@ -538,8 +605,8 @@
                                 <tr class="tr-sub">
                                     <td>216.57</td>
                                     <td>227.84</td>
-                                    <td>-11.27</td>
-                                    <td class="t-split">-4.95%</td>
+                                    <td class="notify">-11.27</td>
+                                    <td class="t-split notify">-4.95%</td>
 
                                     <td>216.57</td>
                                     <td>227.84</td>
@@ -567,6 +634,14 @@
 
         <div class="amp-table-wrapper" id="noi-arrearage">
             <table class="table table-no-bordered table-hover amp-table">
+                <colgroup>
+                    <col width="15%">
+                    <col width="17%">
+                    <col width="17%">
+                    <col width="17%">
+                    <col width="17%">
+                    <col width="17%">
+                </colgroup>
                 <thead>
                 <tr >
                     <th></th>
