--- a/app/static/css/common/static_table.css
+++ b/app/static/css/common/static_table.css
@@ -106,5 +106,4 @@
 
 .amp-table>tbody>tr.tr-main{}
 .amp-table>tbody>tr.tr-main.tr-collapse{}
-
-
+.amp-table>tbody>tr.tr-collapsed{display: none;}
