--- a/app/views/noi_analyse/noi.html
+++ b/app/views/noi_analyse/noi.html
@@ -692,14 +692,21 @@
         </div>
 
     </div><!--ys-block-->
-    <div class="amp-block-pd">
+    <div class="amp-block-pd clearfix">
         <div class="amp-block-title">
             <h3 class="col-xs-4">NOI实际与方案(一、二、三)对比</h3>
         </div>
-        <div class="col-xs-12">
-            <div id="chart-noi" style="height:380px"></div>
-        </div>
+        <div class="col-xs-12 chart-wrapper" id="noi-chart-wrapper" >
+            <em class="chart-axis-info chart-axis-y-info">万元</em>
+            <div id="noi-chart" style="height:310px;"></div>
+            <div class="chart-legend">
 
+                <span><em class="color-label" style="background-color:#60cd7a;"></em><i class="name">NOI实际</i></span>
+                <span><em class="color-label" style="background-color:#5dbaf7;"></em><i class="name">方案1</i></span>
+                <span><em class="color-label" style="background-color:#fd7170;"></em><i class="name">方案2</i></span>
+                <span><em class="color-label" style="background-color:#feb739;"></em><i class="name">方案3</i></span>
+            </div>
+        </div>
     </div>
 
 
