--- a/app/static/css/common/common.css
+++ b/app/static/css/common/common.css
@@ -80,11 +80,11 @@ a:hover, a:focus, a:active{color:#2da8cc;}
 
 
 .amp-btn{padding:0 12px;min-width: 120px;height:40px;line-height:40px;text-align: center;color:#fff;border:0;border-radius:3px;
-        background-color:#33d393;font-size:15px;position: relative;z-index:99;}
-.amp-btn:hover, .amp-btn:focus, .amp-btn:active,.amp-btn:active:focus, .amp-btn:active:hover{background-color: #31be83;color:#fff;}
+        background-color:#5ab46e;font-size:15px;position: relative;z-index:99;}
+.amp-btn:hover, .amp-btn:focus, .amp-btn:active,.amp-btn:active:focus, .amp-btn:active:hover{background-color: #55a865;color:#fff;}
 .amp-btn-lg{width:252px;}
-
-.amp-btn-lg:before { content: ""; position: absolute; z-index: -1; top: 0; left: 0; right: 0; bottom: 0; background: #31be83;border-radius:3px;
+.amp-btn-lg:hover, .amp-btn-lg:focus, .amp-btn-lg:active,.amp-btn-lg:active:focus, .amp-btn-lg:active:hover{background-color:#5ab46e;;color:#fff;}
+.amp-btn-lg:before { content: ""; position: absolute; z-index: -1; top: 0; left: 0; right: 0; bottom: 0; background: #55a865;border-radius:3px;
     -webkit-transform: scale(0); transform: scale(0); -webkit-transition-property: transform; transition-property: transform;
     -webkit-transition-duration: 0.3s; transition-duration: 0.3s;
     -webkit-transition-timing-function: ease-out;  transition-timing-function: ease-out;
